--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,2 +1,4 @@
-FROM alpine
-CMD ["echo", "Hello World!!!"]
+#FROM alpine
+FROM nginx:alpine
+COPY index.html /usr/share/nginx/html/index.html
+#CMD ["echo", "Hello World!!!"]
